# rcl-contest-2021-long

./: .gitignore  Cargo.toml  run_test.sh  run_test_all.sh
A/tester/: gen_test.sh  judge-all.py  judge.py
